--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "react-dom": "18.2.0",
     "styled-components": "^6.0.4",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^8.0.1"
   }
 }
